# AMR-Bot

./: CMakeLists.txt  LeftPanel.qml  Main.qml  RightPanel.qml  main.cpp
