cmake_minimum_required(VERSION 3.16)

project(sampleAmr VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Quick)

qt_standard_project_setup(REQUIRES 6.8)

qt_add_executable(appsampleAmr
    main.cpp
)

qt_add_qml_module(appsampleAmr
    URI sampleAmr
    QML_FILES
        Main.qml
        QML_FILES LeftPanel.qml
        QML_FILES RightPanel.qml
        QML_FILES VirtualKeypad.qml
        QML_FILES CenterPanel.qml
)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
set_target_properties(appsampleAmr PROPERTIES
#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.appsampleAmr
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_link_libraries(appsampleAmr
    PRIVATE Qt6::Quick
)

include(GNUInstallDirs)
install(TARGETS appsampleAmr
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
